// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagePanel appearance='error' 1`] = `
<DocumentFragment>
  <div
    class="css-3qkzfp"
    data-cy="messagePanel"
  >
    <div
      class="css-1dauq5a"
      data-cy="card"
    >
      <div
        class="css-1dmb3p1"
      >
        <div
          class="css-rgkn38"
          data-cy="spacingBox"
        >
          <h2
            class="rmTextMargins css-ivxmqa"
            data-cy="headingText2"
          >
            <svg
              aria-label="system-circle-close icon"
              class="css-lfoue6"
              data-cy="icon"
              height="16"
              preserveAspectRatio="xMinYMin meet"
              role="img"
              viewBox="0 0 16 16"
              width="16"
            >
              <use
                xlink:href="#system-circle-close"
              />
            </svg>
            <span
              class="css-m1scup"
              data-cy="spacingBox"
            >
              Heading
            </span>
          </h2>
        </div>
        <div
          class="css-94vex"
          data-cy="spacingBox"
        >
          Body content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MessagePanel default 1`] = `
<DocumentFragment>
  <div
    class="css-3qkzfp"
    data-cy="messagePanel"
  >
    <div
      class="css-1dauq5a"
      data-cy="card"
    >
      <div
        class="css-1dmb3p1"
      >
        <div
          class="css-rgkn38"
          data-cy="spacingBox"
        >
          <h2
            class="rmTextMargins css-ivxmqa"
            data-cy="headingText2"
          >
            Heading
          </h2>
        </div>
        <div
          class="css-94vex"
          data-cy="spacingBox"
        >
          Body content
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MessagePanel renders with primary and secondary actions 1`] = `
<DocumentFragment>
  <div
    class="css-3qkzfp"
    data-cy="messagePanel"
  >
    <div
      class="css-1dauq5a"
      data-cy="card"
    >
      <div
        class="css-1dmb3p1"
      >
        <div
          class="css-rgkn38"
          data-cy="spacingBox"
        >
          <h2
            class="rmTextMargins css-ivxmqa"
            data-cy="headingText2"
          >
            Heading
          </h2>
        </div>
        <div
          class="css-1yjoybz"
          data-cy="spacingBox"
        >
          Body content
        </div>
        <div
          class="css-1jqlr34"
          data-cy="flex"
        >
          <div
            class="css-1rhjo5i"
            data-cy="flexItem"
          >
            <button
              class="css-1h85cd2 css-1qbr1ah"
              data-cy="secondaryButton"
              tabindex="0"
              type="button"
            >
              <span
                class=""
              >
                Secondary
              </span>
            </button>
          </div>
          <div
            class="css-1rhjo5i"
            data-cy="flexItem"
          >
            <button
              class="css-xcotv6 css-tc1f66"
              data-cy="primaryButton"
              tabindex="0"
              type="button"
            >
              <span
                class=""
              >
                Primary
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
